[package]
name = "ekecheiria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
image = "0.25.0"
log = "0.4.21"
pollster = "0.3.0"
rumqttc = "0.24.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
wgpu = "0.19.3"

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"
